# Data_Analysis_Python

./: .gitignore  README.md  setup.py
app/: pyproject.toml
app/config/: AppSettings.py  pyproject.toml
app/data_analysis/: 1_Data_Cleaning_And_Feature_Engineering.ipynb  1_Data_Cleaning_And_Feature_Engineering.py  2.ipynb  2_Data_Aggregations.ipynb  2_Data_Aggregations.py  3_Basic_Visualizations.py  4_Advanced_Visualizations.py  5_Data_Formats.py  Features.py  pyproject.toml
app/data_analysis/clean/: Cars_Cleaned.csv
app/data_analysis/data_formats/: Avro_Data_Format.py  Excel.ipynb  Excel_Data_Format.py  HTML.ipynb  HTML_Data_Format.py  JSON.ipynb  JSON_Data_Format.py  Parquet.ipynb  Parquet_Data_Format.py  XML.ipynb  XML_Data_Format.py
app/data_analysis/raw/: PO.html
app/data_analysis/visualizations/: Advanced.ipynb  Advanced_Visualizations.py  Basic.ipynb  Basic_Visualizations.py
