[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
pytest = { version = "^8.2.0", python = ">=3.8" }

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires-python = ">=3.11"
requires = [
    "poetry-core"
    ]
build-backend = "poetry.core.masonry.api"