[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
configparser = { version = "7.0.0", python = ">=3.8" }

[build-system]
requires-python = ">=3.11"
requires = [
    "poetry-core"
    ]
build-backend = "poetry.core.masonry.api"